Navbar was overlapping carousel. Added 100px padding-top to fix the issue

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
   padding: 0px;
   overflow-x: hidden;
 }
-
+body {
+  padding-top: 100px;
+}
 a:link {
   color: black;
 }
